# witransformer

./: .gitignore  CMakeLists.txt  README.md  activaciones.cpp  activaciones.hpp  compile_cuda.sh  tensor.cpp  tensor.hpp  test_grads.cpp
include/: cuda_kernels.cu  cuda_kernels.cuh  mnist.hpp  nn.hpp  ops.hpp  optimizer.hpp  tensor.hpp  vit.hpp
scripts/: prepare_data.sh
src/: eval.cpp  train.cpp
